<resources>
    <string name="app_name">M_Park</string>
    <string name="google_maps_key">AIzaSyBKC1_SO1jIAzH23QFXSu0zdewCnBaVTcQ</string>
    <string name="park">PARK</string>
    <string name="parked">PARKED  </string>
    <string name="Support">Support</string>
    <string name="Email">Email Developer</string>
    <string name="Developer_Name">Mukul Rawat</string>
    <string name="Developer">(Developer)</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="first_page_text">Shows nearby Parking Spots and gas Stations</string>
    <string name="second_page_text">Click on Marker to open in Map</string>
    <string name="third_page_text">Long Press on Map to change view</string>
    <string name="fourth_page_text">Click the Button to Mark your car and place a marker</string>
    <string name="fifth_page_text">Click on marker to remove it</string>
    <string name="start">start</string>
    <string name="dialog_title">Remove or open in map</string>
    <string name="navigate">NAVIGATE</string>
    <string name="remove">REMOVE</string>
</resources>
