<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <com.github.siyamed.shapeimageview.CircularImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageDialog"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/Developer_Name"
        android:id="@+id/textDialog"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Developer"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:id="@+id/buttondialog"
        android:layout_gravity="center_horizontal" />


</LinearLayout>