<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonnavigate"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/navigate"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonremove"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/remove"
            />

    </RelativeLayout>

</LinearLayout>